# pyscript

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING-STARTED.md  GOVERNANCE.md  JS_IN_PYSCRIPT.md  Jenkinsfile  LICENSE  MAINTAINERS.md  Makefile  README.md  README_CN.md  TROUBLESHOOTING.md  counter.py  discussion.md  html.vim  integration.xml  package-lock.json  pr.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg  todo.py
.github/: PULL_REQUEST_TEMPLATE.md  dashboard.yaml  dependabot.yml  release.yml  stale.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  misc.yml
.github/workflows/: build-alpha.yml  build-latest.yml  build-release.yml  build-unstable-next.yml  build-unstable.yml  build.yml  docs-latest.yml  docs-release.yml  docs-review.yml  (+16 more)
Example/: index.html  pyscript.toml
New/: README.md
bridge/: README.md  index.js  package.json
core/: README.md  eslint.config.mjs  index.js  package-lock.json  package.json  pyodide.sh
doc_jp/: GETTING-STARTED.md  README.md
docs/: Makefile  README.md  changelog.md  conf.py  environment.yml  error.md  index.md  robots.txt
examples/: altair.html  antigravity.html  antigravity.py  await3.html  await4.html  await5.html  babylonjs-minimal-demo.html  bokeh.html  bokeh_interactive.html  counter.html  counter.py  d3.html  d3.py  demo.html  folium.html  hello_world.html  ice-cream-d3.html  ice-cream.html  index.html  markdown-plugin.html  matplotlib.html  message_passing.html  micrograd_ai.html  micrograd_ai.py  multiple_pyscript_tags.html  myplugin.py  namespaces.html  numpy_canvas_fractals.html  palettes.py  pandas.html  panel.html  panel_deckgl.html  panel_kmeans.html  panel_stream.html  pdbtest.py  plugin.html  py_input_file.html  py_list.py  pyclickdemo.py  pylist.py  (+15 more)
examples/toga/freedom/: pyproject.toml
examples/toga/freedom/src/freedom/: __main__.py
libs/: README.md  package.json
newdocs/: README.md  environment.yml  mkdocs.yml  robots.txt
org-docs/: ANTITRUST.md  CHARTER.md  CODE-OF-CONDUCT.md  STEERING-COMMITTEE.md  TRADEMARKS.md
poc/: pyscript.js  pyscript1.css
public/: README.md  index.html
pyscript.core/: .eslintrc.cjs  .eslintrc.json  .gitignore  .npmignore  Makefile  README.md  core.css  core.js  dev.cjs  index.html  jsdelivr.js  node.importmap  package-lock.json  package.json  pyscript-core-0.5.3-rc1.tgz  pyscript.js  sw.js  tsconfig.json
pyscript.next/: README.md  core.css  core.js  min.js  package-lock.json  package.json
pyscript.sw/: .npmignore  LICENSE  README.md  package-lock.json  package.json  pyscript.sw.js
pyscriptjs/: .eslintrc.js  .prettierignore  .prettierrc.js  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  directoryManifest.mjs  environment.yml  esbuild.js  esbuild.mjs  hello_world.html  index.html  jest-environment-jsdom.js  jest.config.js  package-lock.json  package.json  rollup.config.js  tailwind.config.js  testing_event_interaction.html  tsconfig.json  webpack.config.js
pyscriptjs/examples/toga/freedom/: fake-briefcase.sh  pyproject.toml
pyscriptjs/examples/toga/freedom/src/freedom/: __main__.py  app.py
workflows/: prepare-release.yml  publish-release.yml  publish-snapshot.yml  test-next.yml
(+1142 files in other folders)
