[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

[tool.codespell]
skip = "pyscriptjs/node_modules/*,*.js,*.json"

[tool.ruff]
builtins = [
    "Element",
    "PyItemTemplate",
    "PyListTemplate",
    "pyscript",
]
ignore = [
    "S101",
    "S113",
]
line-length = 100
select = [
    "B",
    "C9",
    "E",
    "F",
    "I",
    "S",
    "UP",
    "W",
]
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.setuptools]
include-package-data = false
