[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Freedom Units"
bundle = "org.beeware"
version = "0.0.1"
url = "https://beeware.org"
license = "BSD license"
author = "Tiberius Yak"
author_email = "tiberius@beeware.org"

[tool.briefcase.app.freedom]
formal_name = "Freedom Units"
description = "A testing app"
sources = ["src/freedom"]
requires = [
]

[tool.briefcase.app.freedom.macOS]
requires = [
    "toga-cocoa~=0.3.0",
    "std-nslog>=1.0.0",
]

[tool.briefcase.app.freedom.linux]
requires = [
    "toga-gtk~=0.3.0",
]

[tool.briefcase.app.freedom.linux.appimage]
system_requires = [
    "gir1.2-webkit2-4.0",
    "libcairo2-dev",
    "libgirepository1.0-dev",
    "libgtk-3-dev",
    "libpango1.0-dev",
    "librsvg2-dev",
    "libwebkit2gtk-4.0-dev",
]
linuxdeploy_plugins = [
    "DEPLOY_GTK_VERSION=3 gtk",
]

[tool.briefcase.app.freedom.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "42"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.freedom.windows]
requires = [
    "toga-winforms~=0.3.0",
]

# Mobile deployments
[tool.briefcase.app.freedom.iOS]
requires = [
    "toga-iOS~=0.3.0",
    "std-nslog>=1.0.0",
]

[tool.briefcase.app.freedom.android]
requires = [
    "toga-android~=0.3.0",
]

# Web deployments
[tool.briefcase.app.freedom.web]
requires = [
    "toga-web~=0.3.0",
]
style_framework = "Bootstrap v4.6"
