[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Freedom Units"
bundle = "org.beeware"
version = "0.0.1"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.freedom]
formal_name = "Freedom Units"
description = "A testing app"
sources = ['src/freedom']
requires = [
    '../static/wheels/toga_core-0.3.0.dev33-py3-none-any.whl',
]


[tool.briefcase.app.freedom.macOS]
requires = [
    'git+https://github.com/beeware/toga.git#egg=toga-cocoa&subdirectory=src/cocoa',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.freedom.linux]
requires = [
    'git+https://github.com/beeware/toga.git#egg=toga-gtk&subdirectory=src/gtk',
]

[tool.briefcase.app.freedom.windows]
requires = [
    'git+https://github.com/beeware/toga.git#egg=toga-winforms&subdirectory=src/winforms',
]

# Mobile deployments
[tool.briefcase.app.freedom.iOS]
requires = [
    'git+https://github.com/beeware/toga.git#egg=toga-iOS&subdirectory=src/iOS',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.freedom.android]
requires = [
    'git+https://github.com/beeware/toga.git#egg=toga-android&subdirectory=src/android',
]
